--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "./node_modules/webpack-dev-server/bin/webpack-dev-server.js",
     "build": "./node_modules/webpack/bin/webpack.js --config webpack.config.js",
+    "lintfix": "./node_modules/eslint/bin/eslint.js --fix entries components",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "concefly@foxmail.com",
@@ -23,5 +24,8 @@
     "url-loader": "^0.5.7",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1"
+  },
+  "devDependencies": {
+    "eslint": "^2.13.0"
   }
 }
