--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "./node_modules/webpack-dev-server/bin/webpack-dev-server.js",
+    "start": "./node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --host '0.0.0.0'",
     "build": "./node_modules/webpack/bin/webpack.js --config webpack.config.js",
     "lintfix": "./node_modules/eslint/bin/eslint.js --fix entries components",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -20,6 +20,10 @@
     "html-webpack-plugin": "^2.21.0",
     "less": "^2.7.1",
     "less-loader": "^2.2.3",
+    "materialize-css": "^0.97.6",
+    "node-sass": "^3.8.0",
+    "postcss": "^5.0.21",
+    "sass-loader": "^3.2.0",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
     "webpack": "^1.13.1",
