--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "file-loader": "^0.8.5",
     "html-loader": "^0.4.3",
     "html-webpack-plugin": "^2.21.0",
+    "jquery": "^3.0.0",
     "less": "^2.7.1",
     "less-loader": "^2.2.3",
     "materialize-css": "^0.97.6",
