--- a/package.json
+++ b/package.json
@@ -13,8 +13,12 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
+    "babel-runtime": "^6.0.0",
+    "materialize-css": "^0.97.6",
+    "node-sass": "^3.8.0",
+    "sass-loader": "^4.0.0",
     "vue": "^1.0.21",
-    "babel-runtime": "^6.0.0"
+    "vue-router": "^0.7.13"
   },
   "devDependencies": {
     "babel-core": "^6.0.0",
