--- a/package.json
+++ b/package.json
@@ -4,37 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server",
-    "build": "webpack --config webpack.config.js",
-    "test": "karma start karma-conf.js"
+    "doc": "jsdoc -c jsdoc.conf.json",
+    "test": "mocha --recursive test/"
   },
   "author": "concefly@foxmail.com",
   "license": "MIT",
-  "dependencies": {
-    "bundle-loader": "^0.5.4",
-    "css-loader": "^0.23.1",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "file-loader": "^0.8.5",
-    "html-loader": "^0.4.3",
-    "html-webpack-plugin": "^2.21.0",
-    "less": "^2.7.1",
-    "less-loader": "^2.2.3",
-    "style-loader": "^0.13.1",
-    "url-loader": "^0.5.7",
-    "webpack": "^1.13.1",
-    "webpack-dev-server": "^1.14.1"
-  },
+  "dependencies": {},
   "devDependencies": {
-    "babel-core": "^6.24.0",
-    "babel-loader": "^6.4.1",
-    "babel-plugin-transform-es2015-computed-properties": "^6.22.0",
-    "babel-preset-env": "^1.2.2",
     "chai": "^3.5.0",
-    "karma": "^1.5.0",
-    "karma-chrome-launcher": "^2.0.0",
-    "karma-mocha": "^1.3.0",
-    "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "^2.0.3",
-    "mocha": "^3.2.0"
+    "jsdoc": "^3.4.3",
+    "mocha": "^3.2.0",
+    "nodemon": "^1.11.0"
   }
 }
