--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "scaffold-webpack",
   "version": "0.0.1",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "start": "webpack-dev-server",
     "build": "webpack --config webpack.config.js",
-    "test": "karma start karma-conf.js"
+    "doc": "jsdoc -c jsdoc.conf.json",
+    "test": "mocha --recursive test/no-browser",
+    "test-browser": "karma start karma-conf.js"
   },
   "author": "concefly@foxmail.com",
   "license": "MIT",
@@ -30,6 +32,7 @@
     "babel-plugin-transform-es2015-computed-properties": "^6.22.0",
     "babel-preset-env": "^1.2.2",
     "chai": "^3.5.0",
+    "jsdoc": "^3.4.3",
     "karma": "^1.5.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-mocha": "^1.3.0",
